# API_development_on_Flask

./: pyproject.toml  requirements.txt
1. SQL/: app.py  utils.py
2. SQLAlchemy/: app.py  offer.txt  order.txt  test.http  user.txt  views.py
2. SQLAlchemy/instance/: test.sql
3. REST API на Flask/: app.py  create_data.py  Пример.py
3. REST API на Flask/instance/: movie.db
Movie_Search/: app.py  config.py  implemented.py
Movie_Search/dao/: genre.py  movie.py  user.py
Movie_Search/dao/model/: movie.py  user.py
Movie_Search/helpers/: constants.py  decorators.py
Movie_Search/http/: auth.http  movie.http  test_api.http
Movie_Search/instance/: movies.db
Movie_Search/service/: author.py  movie.py  user.py
Movie_Search/tests/test_service/: test_director.py  test_genre.py  test_movie.py
Movie_Search/views/: author.py  directors.py  movies.py  users.py
